--- a/root/index.html
+++ b/root/index.html
@@ -16,34 +16,50 @@
         <div id="descuentos"><p>Descuentos 20%</p></div>
         <div id="heroes"><h1>Héroes</h1></div>
     </header>
+    <main>
     <section>
         <article class="batman">
             <i class="fas fa-heart"></i>
-            <img src="./img/liga-justicia-batman-kO4H--1024x512@abc 1.png" alt="Imagen batman">
+            <img src="./img/liga-justicia-batman-kO4H--1024x512@abc 1.png" alt="Imagen batman" class="icon">
             <h2>BATMAN</h2>
             <p class="card">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, 
             Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</p>
             <button type="button">Ver más</button>
         </article>
+        <article class="mujerMaravilla">
+            <i class="fas fa-heart"></i>
+            <img src="./img/Copia de liga-justicia-batman-kO4H--1024x512@abc 1.png" alt="Imagen mujer maravilla" class="img-achicar icon">
+            <h2>MUJER MARAVILLA</h2>
+            <p class="card">Es una superheroína creada por William Moulton Marston para la editorial DC Comics. Es una princesa guerrera de 
+            las Amazonas, pueblo ficticio basado en el de las amazonas de la mitología griega. En su tierra natal es conocida como la princesa 
+            Diana de Temiscira pero fuera de esta utiliza la identidad secreta de Diana Prince. </p>
+            <button type="button">Ver más</button>
+        </article>
+    </section>
+    <button type="button" id="boton-mas">+</button>
+    <section>
+        <article class="superman">
+            <i class="fas fa-heart"></i>
+            <img src="./img/Copia de liga-justicia-batman-kO4H--1024x512@abc 1 (1).png" alt="Imagen Superman" class="img-achicar icon">
+            <h2>SUPERMAN</h2>
+            <p class="card">Es un superhéroe que apareció por primera vez en los cómics estadounidenses publicados por DC Comics. ​
+            El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe Shuster en 1933 cuando ambos se 
+            encontraban viviendo en Cleveland, Ohio.</p>
+            <button type="button">Ver más</button>
+        </article>
         <article class="harley">
             <i class="fas fa-heart"></i>
-            <img src="./img/liga-justicia-batman-kO4H--1024x512@abc 1 (1).png" alt="Imagen Harley Quinn">
+            <img src="./img/liga-justicia-batman-kO4H--1024x512@abc 1 (1).png" alt="Imagen Harley Quinn" class="icon">
             <h2>Harley Quinn</h2>
             <p class="card">La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini 
             para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada</p>
             <button type="button">Ver más</button>
         </article>
-        <article class="batman">
-            <i class="fas fa-heart"></i>
-            <img src="./img/liga-justicia-batman-kO4H--1024x512@abc 1.png" alt="Imagen batman">
-            <h2>BATMAN</h2>
-            <p class="card">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, 
-            Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</p>
-            <button type="button">Ver más</button>
-        </article>
     </section>
+    </main>
     <footer>
         <p>Todos los derechos reservados a FRONT END 1</p>
+        <img src="./img/Vector.png" alt="logo github" id="logo">
     </footer>
 </body>
 </html>
