--- a/root/index.html
+++ b/root/index.html
@@ -14,7 +14,16 @@
 <body>
     <header>
         <div id="descuentos"><p>Descuentos 20%</p></div>
-        <div id="heroes"><h1>Héroes</h1></div>
+        <div id="heroes">
+            <h1>Héroes</h1>
+        </div>
+        <div id="nav-principal">
+            <nav>
+                <a href="contacto.html">Contacto</a>
+                <a href="./registro.html">Registrarme</a>
+                <a href="./login.html">Ingresar</a>
+            </nav>
+        </div>
     </header>
     <main>
     <section>
