Botón añadir superheroe

--- a/root/index.html
+++ b/root/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="nav-principal">
             <nav>
-                <a href="contacto.html">Contacto</a>
+                <a href="./contacto.html">Contacto</a>
                 <a href="./registro.html">Registrarme</a>
                 <a href="./login.html">Ingresar</a>
             </nav>
@@ -45,7 +45,7 @@
             <button type="button">Ver más</button>
         </article>
     </section>
-    <button type="button" id="boton-mas">+</button>
+    <button type="button" id="boton-mas"><a href="./agregar.html">+</a></button>
     <section>
         <article class="superman">
             <i class="fas fa-heart"></i>
